# vulnhunter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
core/: banner.py  config.py  engine.py  module_loader.py  waf.py
modules/: auth.py  base.py  cmdi.py  idor.py  lfi.py  redirect.py  sqli.py  ssrf.py  xss.py
payloads/: credentials.txt  lfi.json  sqli.json  xss.json
profiles/: example_ctf.yaml
tests/: conftest.py  test_config.py  test_helpers.py  test_module_loader.py  test_module_sqli.py  test_modules.py  test_waf_fingerprint.py
utils/: fingerprint.py  helpers.py  logger.py  request_handler.py
