[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vulnhunter"
version = "3.0.0"
description = "Modular Web Exploitation Framework for CTF and authorized penetration testing"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VulnHunter Project" }]
requires-python = ">=3.8"
keywords = ["security", "penetration-testing", "ctf", "web", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
yaml    = ["pyyaml>=6.0.1"]
dev     = ["pytest>=7.4", "pytest-cov>=4.1", "pyyaml>=6.0.1"]

[project.scripts]
vulnhunter = "main:main"

[project.urls]
Homepage   = "https://github.com/vulnhunter/vulnhunter"
Repository = "https://github.com/vulnhunter/vulnhunter"
Issues     = "https://github.com/vulnhunter/vulnhunter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "utils*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "modules", "utils"]
omit   = ["tests/*", "main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
